--- a/platform/security/idp/security-idp-server/src/main/resources/templates/redirect.handlebars
+++ b/platform/security/idp/security-idp-server/src/main/resources/templates/redirect.handlebars
@@ -11,25 +11,25 @@
  * <http://www.gnu.org/licenses/lgpl.html>.
  *
  **/
+-->
+<!DOCTYPE html
+        PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<head>
+    <title>Redirect</title>
+</head>
+<body>
 
- -->
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>security</artifactId>
-        <groupId>ddf.platform.security</groupId>
-        <version>2.8.0-SNAPSHOT</version>
-    </parent>
-    <modelVersion>4.0.0</modelVersion>
-
-    <groupId>ddf.security.idp</groupId>
-    <artifactId>idp</artifactId>
-    <name>DDF :: Security :: IDP</name>
-    <packaging>pom</packaging>
-    <modules>
-        <module>security-idp-client</module>
-        <module>security-idp-server</module>
-    </modules>
-
-</project>
+<script type="text/javascript">
+    window.onload = function() {
+        window.setTimeout(function () {
+            window.setInterval(function () {
+                var encoded = "{{redirect}}";
+                window.location.replace(encoded);
+            }, 1000);
+        }, 100);
+    }
+</script>
+</body>
+</html>
